# wiim

./: .cookiecutter.json  .cursorrules  .dependabot.yml  .env.testing.template  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  API_GUIDE.md  API_TODO.md  ARCHITECTURE.md  CHANGELOG.md  CHANGES_COMPLETED.md  CONTRIBUTING.md  DEBUGGING_DURATION_ISSUE.md  DEVELOPMENT.md  DIAGNOSIS.SUMMARY.md  DOCUMENTATION_PLAN.md  Dockerfile  IMPLEMENTATION_STATUS.md  ISSUE.DIAGNOSIS.md  ISSUE_103_ANALYSIS.md  ISSUE_86_RESPONSE.md  ISSUE_97_INVESTIGATION.md  ISSUE_97_RESPONSE.md  LICENSE  Makefile  README.md  REAL.TEST.RESULTS.md  REFACTOR_PLAN.md  SECURITY.md  TEST.ISSUE.ANALYSIS.md  TEST.SUCCESS.REPORT.md  TESTING.SUMMARY.md  TEST_SETUP_GUIDE.md  TODO.md  TOKEN.TROUBLESHOOTING.md  UPNP_FIX_SUMMARY.md  WHAT_BROKE_ANALYSIS.md  (+22 more)
.devcontainer/: configuration.yaml  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  discussions_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: README-CONSTRAINTS.md  auto-release.yml  auto-release.yml.temp  constraints.txt  hacs.yaml  hassfest.yaml  release-drafter.yml  release.yml  test.yml  tests.yaml
archive/legacy_platform_files/: button.py  device_registry.py  group_media_player.py  media_player.py  sensor.py
archive/outdated_docs/: IMPLEMENTATION_GUIDE.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PLATFORM_ENTITIES.md  PROGRESS.md
custom_components/: __init__.py  home_topology
custom_components/wiim/: GROUP_MANAGEMENT.md  README.md  __init__.py  api.py  api_audio_settings.py  (+69 more)
development/: API_GUIDE.md  ARCHITECTURE.md  ARTWORK_FIX_SUMMARY.md  AUDIO_OUTPUT_API_TESTING.md  CONTRIBUTING.md  DEVELOPER_GUIDE.md  DOCKER_NETWORKING.md  GETEQ_MIGRATION_ANALYSIS.md  HA_INTEGRATION_GUIDE.md  POLLING_STRATEGY.md  README.md  TESTING.md  UPNP_ARCHITECTURE.md  UPNP_TESTING.md  WIIMPLAY_CODEBASE_REVIEW.md  api_reference_guide.md  cursor_rules.md  models.md  refactor-validation.md
docs/: 2025.01.15-test-suite-review.md  API_COMPATIBILITY.md  API_GUIDE.md  ARCHITECTURE.md  AUTOMATED.TEST.RESULTS.md  DEFENSIVE_POLLING_IMPLEMENTATION.md  DESIGN_PHILOSOPHY.md  DEVELOPER_GUIDE.md  DEVELOPMENT-RULES.md  DEVICE.ENUMERATION.AND.TESTING.md  ENTITIES.md  FAQ.md  INDEX.md  LINKPLAY_GROUP_API.md  PROJECT-STRUCTURE.md  QUICK.START.REAL.TESTING.md  README.md  REAL.WORLD.TESTING.md  SERVICE-TEST-COVERAGE.md  SPARC-RULES.md  STATS_TRACKING_PROPOSAL.md  TESTING-CONSOLIDATED.md  TESTING-STRATEGY-2025.md  TTS_GUIDE.md  api-reference.md  automation-cookbook.md  automation-examples.md  automation.md  bug-fix-testing-checklist.md  configuration.md  debugging-discovery-tests.md  developer-guide.md  diagnostics.md  faq-and-troubleshooting.md  features.md  groups.md  installation.md  models.md  multiroom.md  playback-modes-spotify.json  (+4 more)
examples/: README.md
scripts/: DIAGNOSTIC-GUIDE.md  README-SOURCE-DIAGNOSTICS.md  README.TESTING.md  README.md  check-before-push.sh  develop  fix-hacs-version.md  load-test-env.sh  method_scanner.py  pre-release-check.py  pre_commit_check.sh  pre_run_check.sh  quick_check.py  release.sh  ruff_size_check.py  setup.sh  sync-pywiim-version.py  test-advanced-features.py  test-automated.py  test-channel-balance.py  test-complete-suite.py  test-device-115-comprehensive.py  test-device-lifecycle.py  test-multiroom-comprehensive.py  test-pywiim-sources.py  test-real-devices.py  test-reboot-one.py  test-smoke.py  test-timers-browser.py  test-timers-interactive.py  test-timers-quick.py  test-tts-url.py  test-tts-url.sh  test-tts.sh  test_upnp_description.py  validate_hacs.sh  validate_refactor.py  wiim-play-tts-url.sh
test-results/: test_results_1.0.37b0_20251204_171512.json  test_results_1.0.37b0_20251204_171636.json  test_results_1.0.37b0_20251204_171723.json
tests/: FIXTURES.md  README.md  SERVICE-TEST-COVERAGE.md  TEST_ANALYSIS.md  __init__.py  conftest.py  conftest_wiim.py  const.py  run_tests.py  test_api.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_coordinator.py  test_init.py  test_media_player.py  test_sensor.py
tests_backup/: const.py  test_init.py
tests_clean/: conftest.py  test_api.py  test_switch.py
(+97 files in other folders)
